commit img file

--- a/readme
+++ b/readme
@@ -1,6 +1,6 @@
 # My Second Brain
 
-![My Second Brain]("https://website-cdn.studysmarter.de/sites/2/uk/stsm_Building_a_Second_Brain_is_a_methodology_for_saving_and_sy_9fbc7d40-fb57-41fe-bf0b-9cadfd50ed90.png")
+![My Second Brain](https://website-cdn.studysmarter.de/sites/2/uk/stsm_Building_a_Second_Brain_is_a_methodology_for_saving_and_sy_9fbc7d40-fb57-41fe-bf0b-9cadfd50ed90.png)
 
 ## Introduction
 Welcome to my second brain! This repository is a comprehensive collection of my thoughts, notes, and knowledge accumulated over time. Inspired by the concept of a second brain, this digital repository helps me organize and retain information efficiently.
